THRIFT-4662: Rust const string calls function at compile time

Client: rs